automated-demo-acm/yaml-resources/mongo/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo 
spec:
  ports:
  - port: 27017 
    protocol: TCP
    targetPort: 27017
  selector:
    name: mongo
  type: ClusterIP
